spacing fixes

--- a/felixmorongeportfolio/src/styles/Project3.css
+++ b/felixmorongeportfolio/src/styles/Project3.css
@@ -101,31 +101,41 @@
     padding: 4vh 5vw;               /* match prior sections */
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;                    /* tighten up that gap */
+    gap: 1.5rem;                   
   }
   .overview-title-text{
     color: #CC00EB; /* or whatever purple you're using */
     font-size: clamp(1.25rem, 4vw, 49.94px);
     font-weight: 500;
     margin: 0;
+    margin-top: -1.5rem;
+    padding-bottom: 1.25rem;
 }
 .overview-subtext {
-    color: rgba(255, 255, 255);
-    font-size: clamp(1.1rem, 4vw, 38.18px);
+    color: rgba(255, 255, 255,0.5) !important;
+    font-size: clamp(1.1rem, 4vw, 30px);
     line-height: clamp(1.8rem, 5vw, 46px);
     font-weight: 400;
-    margin: 0;
+    margin: 0rem;
     text-align: left;
   }
 .overview-maintext {
     color: white;
-    font-size: clamp(1.25rem, 4vw, 48.22px); /* responsive scaling */
-    line-height: clamp(2rem, 5vw, 70px);     /* match 70px line height */
+    font-size: clamp(1.25rem, 4vw, 30px); /* responsive scaling */
+    line-height: clamp(2rem, 5vw, 50px);     /* match 70px line height */
     font-weight: 400;
     display: flex;
     flex-direction: column;
     gap: 2rem;                               /* more space between paras */
     text-align: left;
+}
+.section-title{
+    color: #CC00EB; /* or whatever purple you're using */
+    font-size: clamp(1.25rem, 4vw, 49.94px);
+    font-weight: 500;
+    margin: 0;
+    margin-top: -2.5rem;
+    padding-bottom: 1.25rem;
 }
 .stack-section {
     padding: 4vh 5vw;
